$Id$

History for IMDBPHP2
====================

v2.0.2
-------------------
! imdbsearch: some search results missed the year (if it was consisting of more than a plain
  year, e.g. something like "2001/II")
! imdb::prodNotes: lastUpdate was broken due to a site change

v2.0.1 (23.05.2010)
-------------------
* imdb::awards() updated with code from its author (tnx, Qvist!)
* imdb::alsoknow() updated with patch from Qvist (tnx again!)
! imdb::tagline() and imdb::prodNotes() have been affected by some site changes
! fixing some minor typos
! imdb site changes broke imdb::releaseInfo() again
+ movieposterdb: added method save_image to save an image to the configured photodir
* user_agent string now taken from browser (if possible)
* imdb::releaseInfo - country was suddenly including anchor tags due to site changes
+ imdbsearch::results now has an additional optional parameter "series" (boolean,
  default TRUE) to indicate whether you want TV series included with the results

v2.0.0 (26.04.2010)
-------------------
! imdb::releaseInfo() was also partly affected by the last IMDB site changes
! another IMDB site change broke imdb::alsoknow()
+ imdb::top250() added as provided by abe (tnx!)
* due to a request, the constant mdbconfig::pilot_imdbfill was turned into a
  protected property (to be accessed via mdb_config::get_pilot_imdbfill and
  mdb_config::set_imdbfill). To enable the use of this, the new constant
  mdb_config::pilot_imdbfallback_enabled needs to be set to TRUE
+ pilotsearch now honors the maxresults setting
! imdb::quotes() had some annoying "share this quote" added due to IMDB site changes
+ added imdb::videosites() to retrieve the external trailer links again
! fixed the imdb_trailer class again (at least basically)
+ pilot::trailers() and pilot::mainPictures() now deliver content from MoviePilot
+ imdb::trailers() now also supports the "extended data" introduced by pilot::trailers():