@@ -8,6 +8,8 @@ v2.0.2
 ! imdbsearch: some search results missed the year (if it was consisting of more than a plain
   year, e.g. something like "2001/II")
 ! imdb::prodNotes: lastUpdate was broken due to a site change
++ movies: added imdb::locations() to retrieve details on the filming locations.
+  pilot::locations() is just a wrapper to this requiring full fallback configured.
 
 v2.0.1 (23.05.2010)
 -------------------
